[package]
name = "serde-dig"
version = "0.1.0"
license-file = "LICENSE"
keywords= ["json", "serde"]
authors = ["Benjamin Trent <4357155+benwtrent@users.noreply.github.com>"]
edition = "2018"
description = "Recursively get child serde_json::Values from a given parent value"
readme="README.md"
repository="https://github.com/benwtrent/serde-dig"
documentation="https://docs.rs/serde-dig"

[dependencies]
serde_json = "1"